--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -7,7 +7,7 @@
   src: url("/fonts/Satoshi-Light.woff2") format("woff2"), url("/fonts/Satoshi-Light.woff") format("woff"),
     url("/fonts/Satoshi-Light.ttf") format("truetype");
   font-weight: 300;
-  /* font-display: swap; */
+  font-display: swap;
   font-style: normal;
 }
 
@@ -16,7 +16,7 @@
   src: url("/fonts/Satoshi-Regular.woff2") format("woff2"), url("/fonts/Satoshi-Regular.woff") format("woff"),
     url("/fonts/Satoshi-Regular.ttf") format("truetype");
   font-weight: 400;
-  /* font-display: swap; */
+  font-display: swap;
   font-style: normal;
 }
 
@@ -25,7 +25,7 @@
   src: url("/fonts/Satoshi-Medium.woff2") format("woff2"), url("/fonts/Satoshi-Medium.woff") format("woff"),
     url("/fonts/Satoshi-Medium.ttf") format("truetype");
   font-weight: 500;
-  /* font-display: swap; */
+  font-display: swap;
   font-style: normal;
 }
 
@@ -34,7 +34,7 @@
   src: url("/fonts/Satoshi-Bold.woff2") format("woff2"), url("/fonts/Satoshi-Bold.woff") format("woff"),
     url("/fonts/Satoshi-Bold.ttf") format("truetype");
   font-weight: 700;
-  /* font-display: swap; */
+  font-display: swap;
   font-style: normal;
 }
 
